# welcomehome.agency

./: .gitignore  README.md  middleware.ts  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/compare/: page.tsx
app/dashboard/: page.tsx
app/demo/: page.tsx
app/investorpitch/: page.tsx
app/login/: page.tsx
app/platform/: page.tsx
app/saved/: page.tsx
app/search/: page.tsx
app/survey/: page.tsx
backend-services/: CLOUDFLARE_DEPLOYMENT.md  README.md  docker-compose.yml
backend-services/Tokenizer/: hardhat.config.js  package.json
backend-services/frontend/: .dockerignore  .eslintignore  .eslintrc.cjs  LICENSE  jest.config.js  next.config.mjs  open-next.config.ts  package-lock.json  package.json  tsconfig.json
backend-services/server/: .eslintrc.json  Procfile  README.md  env.example  package-lock.json  package.json
components/: add-agent-modal.tsx  agent-cards-section.tsx  agent-selector.tsx  chat-widget.tsx  cta-section.tsx  dashboard-client.tsx  features-section.tsx  footer.tsx  free-tool-section.tsx  hero-section.tsx  price-alert-dialog.tsx  pricing-section.tsx  property-card.tsx  property-grid.tsx  property-map.tsx  questionnaire-section.tsx  search-filters.tsx  stats-section.tsx  survey-form.tsx
lib/: auth.ts  db.ts
scripts/: 001-create-schema.sql  002-seed-data.sql  003-add-agents-schema.sql
services/: .dockerignore
services/HomeHarvest-master/: pyproject.toml
services/HomeHarvest-master/homeharvest/core/scrapers/realtor/: queries.py
services/HomeHarvest-master/tests/: test_realtor.py
(+1277 files in other folders)
